# AI-agents-learning

./: .gitignore  README.md  pyproject.toml  taskOne.py
lessonOne/: README.md  main.py
lessonTwo/: main.py  server.py
lesson_1/: pyproject.toml
lesson_2/: README.md  main.py  pyproject.toml  server_https.py
lesson_3_&_4/: AIAgent.json  README.md  agent_flow.json
lesson_5/: README.md  pyproject.toml
lesson_5/lite_llm/: README.md  docker-compose.yml  litellm_config.yaml
lesson_5/mcp_servers/: db_server.py  run_db_server.py
lesson_5/src/: react_agent.py  temperature_workflow.py  workflow_agent.py
lesson_5/src/agents/: __init__.py  base.py  react_agent.py  workflow_agent.py  workflow_models.py
lesson_5/src/clients/: __init__.py  llm_client.py  mcp_client.py  multi_mcp_client.py  ollama_client.py
lesson_5/src/workflows/: __init__.py  temperature_cache_workflow.py
lesson_6/: README.md  pyproject.toml
lesson_6/01_langchain/: main.py
lesson_6/02_langgraph/: __init__.py  db_agent.py  formater_agent.py  graph.py  main.py  visualizer.py  weather_agent.py
taskOne/: main.py
