[project]
name = "react-agent"
version = "0.1.0"
description = "A ReAct (Reason and Act) AI agent that handles multiple tool calls"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "curl-cffi>=0.11.4",
    "openai>=1.66.3",
    "httpx>=0.27.0,<0.28.0",
    "FastMCP>=0.2.0,<0.3.0",
    "mcp>=1.9.4",
    "pydantic>=2.10.6",
    "uvicorn>=0.34.0",
]